<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/avatar"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@id/avatarImageView"
            app:layout_constraintTop_toTopOf="@id/avatarImageView"
            app:layout_constraintBottom_toTopOf="@id/onlineIcon"/>

        <ImageView
            android:id="@+id/onlineIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/online_icon"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toEndOf="@id/avatarImageView"
            app:layout_constraintTop_toBottomOf="@id/usernameTextView"
            app:layout_constraintBottom_toBottomOf="@id/avatarImageView"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/online"
            android:textSize="12sp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/onlineIcon"
            app:layout_constraintTop_toTopOf="@id/onlineIcon"
            app:layout_constraintBottom_toBottomOf="@id/onlineIcon" />


        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/settings_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/usernameTextView"
            app:layout_constraintBottom_toBottomOf="@id/onlineIcon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/chat_background" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="5" />
    </FrameLayout>

    <com.hfad.icode.SendMessageEditText
        android:id="@+id/messageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginVertical="10dp"
        android:drawableEnd="@drawable/send_off"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/type"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_hint" />
</LinearLayout>